# pitedgar

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
examples/: fcf_sp500.py  fetch_earnings.py  pit_earnings_csv.py
pitedgar/: __init__.py  cli.py  config.py  downloader.py  mapping.py  parser.py  periods.py  query.py  util.py
tests/: README.md  conftest.py  test_adversarial.py  test_cli.py  test_config.py  test_downloader.py  test_integration.py  test_mapping.py  test_parser.py  test_periods.py  test_query.py  test_util.py
