[tool.poetry]
name = "pitedgar"
version = "0.2.3"
description = "Point-in-time SEC EDGAR financial data pipeline"
authors = ["Ariel Nacamulli"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/arielNacamulli/pitedgar"
repository = "https://github.com/arielNacamulli/pitedgar"
documentation = "https://github.com/arielNacamulli/pitedgar#readme"
keywords = ["SEC", "EDGAR", "financial-data", "point-in-time", "XBRL", "backtesting"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]
packages = [{ include = "pitedgar" }]

[tool.poetry.dependencies]
python = ">=3.11"
edgartools = ">=5.0"
pandas = ">=2.0"
pyarrow = "*"
requests = "*"
tqdm = "*"
loguru = "*"
pydantic = ">=2.0"
click = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-mock = "*"
pytest-cov = "*"

[tool.coverage.run]
source = ["pitedgar"]
omit = ["pitedgar/cli.py"]

[tool.coverage.report]
show_missing = true

[tool.poetry.scripts]
pitedgar = "pitedgar.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
