[tool.poetry]
name = "pitedgar"
version = "0.2.9"
description = "Point-in-time SEC EDGAR financial data pipeline"
authors = ["Ariel Nacamulli"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/arielNacamulli/pitedgar"
repository = "https://github.com/arielNacamulli/pitedgar"
documentation = "https://github.com/arielNacamulli/pitedgar#readme"
keywords = ["SEC", "EDGAR", "financial-data", "point-in-time", "XBRL", "backtesting"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]
packages = [{ include = "pitedgar" }]

[tool.poetry.dependencies]
python = ">=3.11"
edgartools = ">=5.0"
pandas = ">=2.0"
pyarrow = "*"
requests = "*"
tqdm = "*"
loguru = "*"
pydantic = ">=2.0"
click = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-mock = "*"
pytest-cov = "*"
ruff = ">=0.6"
mypy = ">=1.10"
pre-commit = ">=3.7"
pandas-stubs = "*"
types-requests = "*"
types-tqdm = "*"

[tool.coverage.run]
source = ["pitedgar"]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.ruff]
line-length = 110
target-version = "py311"
extend-exclude = ["data", "examples"]

[tool.ruff.lint]
select = [
    "E", "W",
    "F",
    "I",
    "B",
    "UP",
    "SIM",
    "RUF",
    "PL",
    "C4",
    "PT",
]
ignore = [
    "E501",
    "PLR0912",
    "PLR0913",
    "PLR0915",
    "PLR2004",
    "B008",
    "RUF002",
    "RUF003",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR2004", "PT011", "B017", "PLC0415"]

[tool.mypy]
python_version = "3.11"
packages = ["pitedgar"]
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
check_untyped_defs = true
disallow_untyped_defs = false
strict_equality = true

[[tool.mypy.overrides]]
module = ["tests.*"]
ignore_errors = true

[tool.poetry.scripts]
pitedgar = "pitedgar.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
